Fix tooltip align

--- a/site/src/App.css
+++ b/site/src/App.css
@@ -123,6 +123,7 @@ a:hover {
   border-radius: 5px;
   position: absolute;
   z-index: 999;
+  text-align: left;
   pointer-events: none;
   line-height: normal;
   font-weight: normal;
